<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <string name="send_fail">Gửi email đặt lại mật khẩu thất bại</string>
    <string name="send_success">Đã gửi email đặt lại mật khẩu</string>
    <string name="register_fail">Tạo tài khoản không thành công</string>
    <string name="register_success">Tạo tài khoản thành công</string>
    <string name="login_fail">Đăng nhập không thành công</string>
    <string name="pass_empty">Vui lòng nhập password</string>
    <string name="email_err">Địa chỉ email không hợp lệ</string>
    <string name="email_empty">Vui lòng nhập email</string>
    <string name="login_success">Đăng nhập thành công!</string>
    <string name="foregot_password">Quên mật khẩu</string>
    <string name="show_password">Hiện mật khẩu</string>
    <string name="password">Mật khẩu</string>
    <string name="register">Đăng ký</string>
    <string name="login">Đăng nhập</string>
    <string name="logout">Đăng xuất</string>
    <string name="user">Thông tin cá nhân</string>
    <string name="app_name">Thời Tiết</string>
    <string name="information">Thời tiết là một phần mềm miễn phí</string>
    <string name="about">Về ứng dụng</string>
    <string name="air_pressure">Áp suất: %s hPa</string>
    <string name="cancel">Hủy</string>
    <string name="centigrade">Độ C (°C)</string>
    <string name="credits">Người đóng góp</string>
    <string name="daily_forecast">Dự báo hàng ngày</string>
    <string name="days">%s ngày</string>
    <string name="edit_location">Chỉnh sửa vị trí</string>
    <string name="edit_location_warning">Vui lòng tắt dịch vụ vị trí để chỉnh sửa thủ công</string>
    <string name="exit_confirmation_message">Nhấn lại để thoát</string>
    <string name="fahrenheit">Độ F (°F)</string>
    <string name="forecast_days">Số ngày dự báo</string>
    <string name="help_message">Cần giúp đỡ? Nhấn vào đây</string>
    <string name="humidity">Độ ẩm: %s%%</string>
    <string name="latitude">Vĩ độ</string>
    <string name="location">Vị trí</string>
    <string name="location_data_failed">Không thể tải dữ liệu vị trí</string>
    <string name="location_access_request">Bật quyền truy cập vị trí để có dữ liệu thời tiết chính xác</string>
    <string name="location_service">Dịch vụ vị trí</string>
    <string name="location_service_summary">Sử dụng dịch vụ vị trí khi có sẵn</string>
    <string name="location_summary_search">Tìm kiếm vị trí</string>
    <string name="location_summary_manual">hoặc cung cấp thủ công các thông số sau</string>
    <string name="longitude">Kinh độ</string>
    <string name="network_connection_failed">Kết nối mạng thất bại. Đang hủy bỏ…</string>
    <string name="precipitation">Lượng mưa: %s%%</string>
    <string name="preferences">Tuỳ chọn</string>
    <string name="request_access">Yêu cầu quyền truy cập</string>
    <string name="report_issue">Báo cáo vấn đề</string>
    <string name="report_issue_summary">Nâng cao một vấn đề trên GitHub</string>
    <string name="source_code">Mã nguồn</string>
    <string name="source_code_summary">Thời Tiết là một ứng dụng mã nguồn mở, sẵn lòng nhận đóng góp từ cộng đồng phát triển. Nhấn vào đây để kiểm tra mã nguồn</string>
    <string name="temperature_feels_like">Cảm giác như %s</string>
    <string name="temperature_unit">Đơn vị nhiệt độ</string>
    <string name="temperature_unit_centigrade" translatable="false">&#176;C</string>
    <string name="temperature_unit_fahrenheit" translatable="false">&#176;F</string>
    <string name="today">Hôm nay</string>
    <string name="translations">Dịch</string>
    <string name="translations_summary">Hãy giúp tôi dịch ứng dụng này.</string>
    <string name="transparent_background">Nền trong suốt</string>
    <string name="transparent_background_summary">Sử dụng nền trong suốt cho các tiện ích thời tiết</string>
    <string name="uv_index">Chỉ số UV: %s</string>
    <string name="uv_index_alert_high">Tránh ra ngoài vào giữa trưa! Hãy chắc chắn bạn tìm bóng dừa! Áo, kem chống nắng và mũ là điều cần thiết!</string>
    <string name="uv_index_alert_medium">Tìm bóng vào giữa trưa! Mặc áo, bôi kem chống nắng và đội mũ!</string>
    <string name="uv_index_alert_safe">Bạn có thể thoải mái thưởng thức việc ra ngoài!</string>
    <string name="uv_index_alert_title">Cảnh báo chỉ số UV cho %s</string>
    <string name="visibility">Tầm nhìn: %s m</string>
    <string name="weather_alert">Cảnh báo thời tiết</string>
    <string name="weather_alert_message">Dự kiến có %s sau một giờ!</string>
    <string name="weather_alert_summary">Hiển thị thông báo về điều kiện thời tiết cực đoan</string>
    <string name="weather_alert_title">Cảnh báo thời tiết cho %s</string>
    <string name="weather_code_clear">Trời quang đãng</string>
    <string name="weather_code_clear_mostly">Hầu hết trời quang đãng</string>
    <string name="weather_code_cloudy_partly">Nhiều mây</string>
    <string name="weather_code_overcast">Âm u</string>
    <string name="weather_code_fog">Sương mù</string>
    <string name="weather_code_rim_fog">Sương giá</string>
    <string name="weather_code_drizzle_light">Mưa phùn nhẹ</string>
    <string name="weather_code_drizzle_moderate">Mưa phùn vừa</string>
    <string name="weather_code_drizzle_dense">Mưa phùn dày</string>
    <string name="weather_code_drizzle_freezing_light">Mưa phùn đóng băng nhẹ</string>
    <string name="weather_code_drizzle_freezing_dense">Mưa phùn đóng băng dày</string>
    <string name="weather_code_rain_light">Mưa nhẹ</string>
    <string name="weather_code_rain_moderate">Mưa vừa</string>
    <string name="weather_code_rain_heavy">Mưa to</string>
    <string name="weather_code_rain_freezing_light">Mưa đóng băng nhẹ</string>
    <string name="weather_code_rain_freezing_heavy">Mưa đóng băng to</string>
    <string name="weather_code_snowfalls_light">Tuyết rơi nhẹ</string>
    <string name="weather_code_snowfalls_moderate">Tuyết rơi vừa</string>
    <string name="weather_code_snowfalls_heavy">Tuyết rơi to</string>
    <string name="weather_code_snow_grains">Hạt tuyết</string>
    <string name="weather_code_snow_showers_light">Cơn tuyết rơi nhẹ</string>
    <string name="weather_code_snow_showers_heavy">Cơn tuyết rơi to</string>
    <string name="weather_code_rain_showers_light">Cơn mưa nhẹ</string>
    <string name="weather_code_rain_showers_moderate">Cơn mưa vừa</string>
    <string name="weather_code_rain_showers_heavy">Cơn mưa to</string>
    <string name="weather_code_thunderstorm">Bão có sấm sét</string>
    <string name="weather_expected_title">Dự báo thời tiết: %s</string>
    <string name="weather_status_failed">Không thể tải dữ liệu thời tiết</string>
    <string name="wind_speed">Tốc độ gió: %s Km/h</string>
    <!--Google-->
    <string name="default_web_client_id">880007599203-mu7pu62n4pt8ug8ug9ol2g0rqmac3f2g.apps.googleusercontent.com</string>
</resources>
